fix: remove overflow

--- a/src/index.css
+++ b/src/index.css
@@ -12,5 +12,4 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
-  overflow: hiddden;
 }
